Bug 1372160 - Supply shader translator with es3 limits. r=lsalzman

MozReview-Commit-ID: CDeoT7UOWdB

Differential Revision: https://phabricator.services.mozilla.com/D18637