dom/canvas/WebGLContext.h
@@ -1501,7 +1501,8 @@ class WebGLContext : public nsICanvasRenderingContextInternal,
   uint32_t mGLMaxVertexAttribs = 0;
   uint32_t mGLMaxFragmentUniformVectors = 0;
   uint32_t mGLMaxVertexUniformVectors = 0;
-  uint32_t mGLMaxVaryingVectors = 0;
+  uint32_t mGLMaxVertexOutputVectors = 0;
+  uint32_t mGLMaxFragmentInputVectors = 0;
 
   uint32_t mGLMaxTransformFeedbackSeparateAttribs = 0;
   uint32_t mGLMaxUniformBufferBindings = 0;
@@ -1512,6 +1513,10 @@ class WebGLContext : public nsICanvasRenderingContextInternal,
 
   uint32_t mGLMaxColorAttachments = 0;
   uint32_t mGLMaxDrawBuffers = 0;
+
+  // ES3:
+  uint32_t mGLMinProgramTexelOffset = 0;
+  uint32_t mGLMaxProgramTexelOffset = 0;
 
   uint32_t mGLMaxViewportDims[2];
 
